kubernetes/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: cameranator
    labels:
        name: cameranator
