kubernetes/object-task-scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cameranator
  name: object-task-scheduler-deployment
  labels:
    app: object-task-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-task-scheduler
  template:
    metadata:
      labels:
        app: object-task-scheduler
    spec:
      containers:
        - name: object-task-scheduler
          image: initialed85/cameranator-object-task-scheduler:latest
          imagePullPolicy: Always
          command: [
            "/srv/object_task_scheduler",
            "-url",
            "http://hasura:8080/v1/graphql",
            "-amqp",
            "amqp://guest:guest@rabbitmq:5672",
          ]
