kubernetes/object-task-worker-amd-generic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cameranator
  name: object-task-worker-amd-generic-deployment
  labels:
    app: object-task-worker-amd-generic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-task-worker-amd-generic
  template:
    metadata:
      labels:
        app: object-task-worker-amd-generic
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: object-task-worker-amd-generic
      nodeSelector:
        gpu: "yes"
        gpu-vendor: "amd"
        gpu-class: "amd-generic"
        home-role: "storage"
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: cameranator-pvc-resized
            readOnly: false
      containers:
        - name: object-task-worker-amd-generic
          image: kube-registry:5000/cameranator-object-task-worker-amd-generic:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /srv/target_dir/events
              subPath: media-volume/srv/events
            - name: shared-volume
              mountPath: /srv/target_dir/segments
              subPath: media-volume/srv/segments
          resources:
            limits:
              amd.com/gpu: "1"
