kubernetes/quotanizer.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: cameranator
    name: quotanizer
    labels:
        app: quotanizer
spec:
    serviceName: quotanizer
    replicas: 1
    selector:
        matchLabels:
            app: quotanizer
    template:
        metadata:
            labels:
                app: quotanizer
        spec:
            volumes:
                - name: shared
                  persistentVolumeClaim:
                      claimName: cameranator
                      readOnly: false
            containers:
                - name: quotanizer
                  image: initialed85/cameranator-quotanizer:latest
                  imagePullPolicy: Always
                  securityContext:
                      privileged: true
                  volumeMounts:
                      - name: shared
                        subPath: media/srv/events
                        mountPath: /srv/target_dir/events
                      - name: shared
                        subPath: media/srv/segments
                        mountPath: /srv/target_dir/segments
                  command:
                      [
                          "/srv/quotanizer",
                          "-path",
                          "/srv/target_dir/events",
                          "-quota",
                          "0",
                          "-path",
                          "/srv/target_dir/segments",
                          "-quota",
                          "1968",
                          "-suffix",
                          ".mp4",
                          "-suffix",
                          ".jpg",
                          "-period",
                          "60",
                      ]
