kubernetes/segment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: cameranator
  name: segment-statefulset
  labels:
    app: segment
spec:
  serviceName: segment
  replicas: 3
  selector:
    matchLabels:
      app: segment
  template:
    metadata:
      labels:
        app: segment
    spec:
      nodeSelector:
        gpu: "yes"
      runtimeClassName: nvidia
      volumes:
        - name: segment-config-map
          configMap:
            name: segment-config-map
        - name: segment-conf-d
          emptyDir: { }
        - name: shared-volume
          persistentVolumeClaim:
            claimName: cameranator-pvc
            readOnly: false
      containers:
        - name: segment-processor
          image: initialed85/cameranator-segment-processor:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /srv/target_dir/segments
              subPath: media-volume/srv/segments
          command: [
            "/srv/segment_processor",
            "-url",
            "http://hasura:8080/v1/graphql"
          ]
        - name: segment-generator
          image: initialed85/cameranator-segment-generator:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: segment-config-map
              subPath: segment-conf
              mountPath: /etc/segment/segment.conf
            - name: segment-conf-d
              mountPath: /etc/segment/conf.d
            - name: shared-volume
              mountPath: /srv/target_dir/segments
              subPath: media-volume/srv/segments
          command: [
            "bash",
            "/etc/segment/conf.d/docker-command.sh"
          ]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
