kubernetes/ubuntu.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cameranator
  name: ubuntu-deployment
  labels:
    app: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: cameranator-pvc
            readOnly: false
      containers:
        - name: ubuntu
          image: ubuntu:22.04
          volumeMounts:
            - name: shared-volume
              subPath: postgres-volume/var/lib/postgresql/data
              mountPath: /srv/postgres-volume/var/lib/postgresql/data
            - name: shared-volume
              subPath: config-volume
              mountPath: /srv/config-volume
            - name: shared-volume
              subPath: media-volume/srv/events
              mountPath: /srv/media-volume/srv/events
            - name: shared-volume
              subPath: media-volume/srv/segments
              mountPath: /srv/media-volume/srv/segments
          command: [
            "tail",
            "-F",
            "/dev/null"
          ]
