kubernetes/hasura.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: cameranator
    name: hasura
    labels:
        app: hasura
spec:
    replicas: 1
    selector:
        matchLabels:
            app: hasura
    template:
        metadata:
            labels:
                app: hasura
        spec:
            containers:
                - name: hasura
                  image: hasura/graphql-engine:v2.1.0
                  ports:
                      - containerPort: 8080
                  livenessProbe:
                      httpGet:
                          path: /healthz
                          port: 8080
                      initialDelaySeconds: 30
                      periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
    name: hasura
    namespace: cameranator
spec:
    selector:
        app: hasura
    ports:
        - name: hasura
          port: 8080
          targetPort: 8080
