kubernetes/rabbitmq.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: cameranator
    name: rabbitmq
    labels:
        app: rabbitmq
spec:
    serviceName: rabbitmq
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:3.9.27-management-alpine
                  ports:
                      - containerPort: 5672
                      - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
    namespace: cameranator
spec:
    selector:
        app: rabbitmq
    ports:
        - name: rabbitmq
          port: 5672
          targetPort: 5672
        - name: rabbitmq-management
          port: 15672
          targetPort: 15672
