kubernetes/filebrowser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cameranator
  name: filebrowser-deployment
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:
        home-role: "storage"
      volumes:
        - name: filebrowser-config-map
          configMap:
            name: filebrowser-config-map
        - name: shared-volume
          persistentVolumeClaim:
            claimName: cameranator-pvc-resized
            readOnly: false
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.22.4
          volumeMounts:
            - name: filebrowser-config-map
              subPath: filebrowser-json
              mountPath: /.filebrowser.json
            - name: shared-volume
              subPath: postgres-volume/var/lib/postgresql/data
              mountPath: /srv/postgres-volume/var/lib/postgresql/data
            - name: shared-volume
              subPath: config-volume
              mountPath: /srv/config-volume
            - name: shared-volume
              subPath: media-volume/srv/events
              mountPath: /srv/media-volume/srv/events
            - name: shared-volume
              subPath: media-volume/srv/segments
              mountPath: /srv/media-volume/srv/segments
          ports:
            - containerPort: 80
          command: [
            "/filebrowser",
            "--disable-preview-resize",
            "--disable-thumbnails",
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: cameranator
spec:
  selector:
    app: filebrowser
  ports:
    - name: filebrowser
      port: 8080
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: cameranator
  name: filebrowser-ingressroute
spec:
  routes:
    - match: HostRegexp(`{subdomain:cameranator}.{any:.*}`) && PathPrefix(`/filebrowser`)
      kind: Rule
      services:
        - name: filebrowser
          port: 8080
