kubernetes/motion.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: cameranator
  name: motion-statefulset
  labels:
    app: motion
spec:
  serviceName: motion
  replicas: 3
  selector:
    matchLabels:
      app: motion
  template:
    metadata:
      labels:
        app: motion
    spec:
      nodeSelector:
        gpu: "yes"
      runtimeClassName: nvidia
      volumes:
        - name: motion-config-map
          configMap:
            name: motion-config-map
        - name: motion-conf-d
          emptyDir: { }
        - name: shared-volume
          persistentVolumeClaim:
            claimName: cameranator-pvc
            readOnly: false
      containers:
        - name: motion-processor
          image: initialed85/cameranator-motion-processor:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-volume
              mountPath: /srv/target_dir/events
              subPath: media-volume/srv/events
          command: [
            "/srv/motion_processor",
            "-url",
            "http://hasura:8080/v1/graphql"
          ]
        - name: motion
          image: initialed85/cameranator-motion:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: motion-config-map
              subPath: motion-conf
              mountPath: /etc/motion/motion.conf
            - name: motion-conf-d
              mountPath: /etc/motion/conf.d
            - name: shared-volume
              mountPath: /etc/motion/mask.d
              subPath: config-volume/etc/motion/mask.d
            - name: shared-volume
              mountPath: /srv/target_dir/events
              subPath: media-volume/srv/events
          ports:
            - containerPort: 8080
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: motion
  namespace: cameranator
spec:
  selector:
    app: motion
  ports:
    - name: motion-stream
      port: 8081
      targetPort: 8081
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: cameranator
  name: motion-stream-middleware-stripreferer
spec:
  headers:
    customRequestHeaders:
      Referer: ""
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: cameranator
  name: motion-stream-middleware-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /motion-stream
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: cameranator
  name: motion-stream-ingressroute
spec:
  routes:
    - match: HostRegexp(`{subdomain:cameranator}.{any:.*}`) && PathPrefix(`/motion-stream`)
      kind: Rule
      middlewares:
        - name: motion-stream-middleware-stripprefix
        - name: motion-stream-middleware-stripreferer
      services:
        - name: motion
          port: 8081
