kubernetes/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cameranator
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        home-role: "storage"
      volumes:
        - name: frontend-build
          emptyDir: { }
        - name: docker-entrypoint-d
          emptyDir: { }
        - name: nginx-config-map
          configMap:
            name: nginx-config-map
        - name: shared-volume
          persistentVolumeClaim:
            claimName: cameranator-pvc-resized
            readOnly: false
      containers:
        - name: nginx
          image: nginx:stable
          volumeMounts:
            - name: frontend-build
              mountPath: /usr/share/nginx/html
            - name: docker-entrypoint-d
              mountPath: /docker-entrypoint.d
            - name: nginx-config-map
              subPath: default-conf
              mountPath: /etc/nginx/conf.d/default.conf
            - name: shared-volume
              subPath: media-volume/srv/events
              mountPath: /srv/target_dir/events
            - name: shared-volume
              subPath: media-volume/srv/segments
              mountPath: /srv/target_dir/segments
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cameranator
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: cameranator
  name: nginx-ingressroute
spec:
  routes:
    - match: HostRegexp(`{subdomain:cameranator}.{any:.*}`)
      kind: Rule
      services:
        - name: nginx
          port: 80
